--- a/BankingApi/src/main/resources/application.properties
+++ b/BankingApi/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.application.name=BankingApi
 spring.datasource.url=jdbc:mysql://localhost:3306/banking_app
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Veera@204
+spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
